--- a/index.html
+++ b/index.html
@@ -14,38 +14,23 @@
     <div id="app">
 
         <div class="container">
-            <div class="slider-wrapper" tabindex="0">
+            <div  class="slider-wrapper" tabindex="0" @keydown.up="prevImg" @keydown.down="nextImg" @mouseover="clearAutoplay" @mouseleave="autoPlay">
 
-                <div class="item">
-                    <img src="img/01.webp" alt="Spiderman" />
+                <div  class="item" >
+                    <img  :src="slides[activeItem].image" :alt="slides[activeItem].title" />
                     <div class="text">
-                        <h3>Spiderman</h3>
+                        <h3>{{slides[activeItem].title}}</h3>
                         <p>
-                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Et temporibus voluptatum suscipit
-                            tempore aliquid deleniti aut
-                            veniam inventore eligendi ex ad ullam, cumque provident totam omnis, magnam dolores dolorum
-                            corporis.
+                            {{slides[activeItem].text}}
                         </p>
                     </div>
                 </div>
 
                 <div class="thumbs">
-                    <div class="prev"></div>
-                    <div class="next"></div>
+                    <div  @click="prevImg()" class="prev"></div>
+                    <div  @click="nextImg()" class="next"></div>
                     <div class="thumb active">
-                        <img src="img/01.webp" alt="Svezia" />
-                    </div>
-                    <div class="thumb">
-                        <img src="img/02.webp" alt="Ratchet & Clank" />
-                    </div>
-                    <div class="thumb">
-                        <img src="img/03.webp" alt="Fortnite" />
-                    </div>
-                    <div class="thumb">
-                        <img src="img/04.webp" alt="Stray" />
-                    </div>
-                    <div class="thumb">
-                        <img src="img/05.webp" alt="Avengers" />
+                        <img v-for="(slide, i) in slides" :key="i" :src="slide.image" alt="slide.title" @click="showClickedImg(i)" :class="activeItem === i ? 'thumbActive':''" />
                     </div>
                 </div>
 
